--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArticleLogic.cs" />
     <Compile Include="DictionaryTreeLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
