--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArticleInfo.cs" />
     <Compile Include="DictionaryTreeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeNodeInfo.cs" />
