--- a/LiuZUnion/LiuZUnion.csproj
+++ b/LiuZUnion/LiuZUnion.csproj
@@ -238,6 +238,8 @@
     <Content Include="Mobile\assets\layer\layer.css" />
     <Content Include="Mobile\assets\layer\layer.js" />
     <Content Include="Mobile\Controllers\App.js" />
+    <Content Include="Mobile\Controllers\constant.js" />
+    <Content Include="Mobile\Controllers\IndexCtrl.js" />
     <Content Include="Mobile\Controllers\ListCtrl.js" />
     <Content Include="Mobile\index.html" />
     <Content Include="Mobile\list.html" />
