--- a/LiuZUnion/LiuZUnion.csproj
+++ b/LiuZUnion/LiuZUnion.csproj
@@ -220,7 +220,7 @@
     <Content Include="HtmlPage2.html" />
     <Content Include="HtmlPage3.html" />
     <Content Include="inbox.html" />
-    <Content Include="index.html" />
+    <Content Include="index_old.html" />
     <Content Include="invoice.html" />
     <Content Include="jqgrid.html" />
     <Content Include="jquery-ui.html" />
@@ -246,15 +246,68 @@
     <Content Include="Mobile\assets\ngInfiniteScroll-master\test\spec\ng-infinite-scroll.min.js" />
     <Content Include="Mobile\assets\ngInfiniteScroll-master\test\spec\ng-infinite-scroll.spec.js" />
     <Content Include="Mobile\Controllers\App.js" />
+    <Content Include="Mobile\Controllers\BigPictureCtrl.js" />
     <Content Include="Mobile\Controllers\constant.js" />
+    <Content Include="Mobile\Controllers\DetailCtrl.js" />
     <Content Include="Mobile\Controllers\IndexCtrl.js" />
     <Content Include="Mobile\Controllers\ListCtrl.js" />
+    <Content Include="Mobile\Detail.html" />
+    <Content Include="Mobile\DetailFiles\app_card3d45b2.js" />
+    <Content Include="Mobile\DetailFiles\class3518c6.js" />
+    <Content Include="Mobile\DetailFiles\cmt_tpl.html3de35e.js" />
+    <Content Include="Mobile\DetailFiles\fakehash38c7af.js" />
+    <Content Include="Mobile\DetailFiles\index3e74cb.js" />
+    <Content Include="Mobile\DetailFiles\kugoumusic_ctrl3d171e.js" />
+    <Content Include="Mobile\DetailFiles\parse36ebcf.js" />
+    <Content Include="Mobile\DetailFiles\pic_reward_qrcode.2x3534dd.png" />
+    <Content Include="Mobile\DetailFiles\video_ctrl3d3b85.js" />
+    <Content Include="Mobile\DetailFiles\wxtopic31a3be.js" />
+    <Content Include="Mobile\DetailInfo.html" />
+    <Content Include="Mobile\dist\css\swiper.css" />
+    <Content Include="Mobile\dist\css\swiper.min.css" />
+    <Content Include="Mobile\dist\js\swiper.esm.bundle.js" />
+    <Content Include="Mobile\dist\js\swiper.esm.js" />
+    <Content Include="Mobile\dist\js\swiper.js" />
+    <Content Include="Mobile\dist\js\swiper.min.js" />
     <Content Include="Mobile\HtmlPage1.html" />
+    <Content Include="Mobile\img\1.jpg" />
+    <Content Include="Mobile\img\2.jpg" />
     <Content Include="Mobile\index.html" />
     <Content Include="Mobile\jquery-3.3.1.min.js" />
     <Content Include="Mobile\list.html" />
     <Content Include="Mobile\sazh_files\index23b0e8.css" />
     <Content Include="Mobile\sazh_files\soon322696.js" />
+    <Content Include="Mobile\Scripts\jweixin-1.0.0.js" />
+    <Content Include="Mobile\t.html" />
+    <Content Include="Mobile\test.html" />
+    <Content Include="Mobile_old\A.js" />
+    <Content Include="Mobile_old\aa.js" />
+    <Content Include="Mobile_old\assets\js\angular-sanitize.min.js" />
+    <Content Include="Mobile_old\assets\js\angular-ui-router.js" />
+    <Content Include="Mobile_old\assets\js\angular.min.js" />
+    <Content Include="Mobile_old\assets\js\jquery-validation-1.14.0\jquery.js" />
+    <Content Include="Mobile_old\assets\js\jquery-validation-1.14.0\jquery.validate.min.js" />
+    <Content Include="Mobile_old\assets\js\jquery-validation-1.14.0\messages_zh.js" />
+    <Content Include="Mobile_old\assets\js\jquery.min.js" />
+    <Content Include="Mobile_old\assets\js\ng-infinite-scroll.min.js" />
+    <Content Include="Mobile_old\assets\layer\layer.css" />
+    <Content Include="Mobile_old\assets\layer\layer.js" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\.gitignore" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\src\infinite-scroll.js" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\test\protractor.conf.js" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\test\spec\ng-infinite-scroll.js" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\test\spec\ng-infinite-scroll.min.js" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\test\spec\ng-infinite-scroll.spec.js" />
+    <Content Include="Mobile_old\Controllers\App.js" />
+    <Content Include="Mobile_old\Controllers\constant.js" />
+    <Content Include="Mobile_old\Controllers\IndexCtrl.js" />
+    <Content Include="Mobile_old\Controllers\ListCtrl.js" />
+    <Content Include="Mobile_old\HtmlPage1.html" />
+    <Content Include="Mobile_old\index.html" />
+    <Content Include="Mobile_old\jquery-3.3.1.min.js" />
+    <Content Include="Mobile_old\list.html" />
+    <Content Include="Mobile_old\sazh_files\index23b0e8.css" />
+    <Content Include="Mobile_old\sazh_files\soon322696.js" />
     <Content Include="nestable-list.html" />
     <Content Include="obj\Debug\LiuZUnion.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\LiuZUnion.dll" />
@@ -2341,6 +2394,17 @@
     <Content Include="assets\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="assets\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="assets\font\fontawesome-webfont.woff" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\.babelrc" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\.eslintrc.json" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\.travis.yml" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\Gruntfile.coffee" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\id_rsa_nginfinite.enc" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\inert-bower.json" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\LICENSE" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\make-bower-build.sh" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\package.json" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\README.md" />
+    <Content Include="Mobile_old\assets\ngInfiniteScroll-master\test\.eslintrc.json" />
     <Content Include="Mobile\assets\ngInfiniteScroll-master\.babelrc" />
     <Content Include="Mobile\assets\ngInfiniteScroll-master\.eslintrc.json" />
     <Content Include="Mobile\assets\ngInfiniteScroll-master\.travis.yml" />
@@ -2352,6 +2416,13 @@
     <Content Include="Mobile\assets\ngInfiniteScroll-master\package.json" />
     <Content Include="Mobile\assets\ngInfiniteScroll-master\README.md" />
     <Content Include="Mobile\assets\ngInfiniteScroll-master\test\.eslintrc.json" />
+    <Content Include="Mobile\DetailFiles\640" />
+    <Content Include="Mobile\DetailFiles\640%281%29" />
+    <Content Include="Mobile\DetailFiles\640%282%29" />
+    <Content Include="Mobile\DetailFiles\640%283%29" />
+    <Content Include="Mobile\DetailFiles\640%284%29" />
+    <Content Include="Mobile\DetailFiles\qrcode" />
+    <Content Include="Mobile\dist\js\swiper.min.js.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -2392,7 +2463,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Mobile\webapi\" />
+    <Folder Include="Mobile_old\webapi\" />
     <Folder Include="Models\" />
     <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="obj\Release\" />
