--- a/LiuZUnion/LiuZUnion.csproj
+++ b/LiuZUnion/LiuZUnion.csproj
@@ -1662,6 +1662,7 @@
     <Content Include="pages\test\pagination.html" />
     <Content Include="pages\test\pagination.js" />
     <Content Include="pages\test\test.html" />
+    <Content Include="pages\upload.aspx" />
     <Content Include="pages\User\UserList.html" />
     <Content Include="pages\User\UserOperate.html" />
     <Content Include="pages\zTree_v3\.gitignore" />
@@ -2460,6 +2461,13 @@
     <Compile Include="pages\angular-ueditor-master\net\App_Code\PathFormater.cs" />
     <Compile Include="pages\angular-ueditor-master\net\App_Code\UploadHandler.cs" />
     <Compile Include="pages\angular-ueditor-master\net\Uploader.cs" />
+    <Compile Include="pages\upload.aspx.cs">
+      <DependentUpon>upload.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\upload.aspx.designer.cs">
+      <DependentUpon>upload.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
